--- a/Casino/MainWindow.xaml
+++ b/Casino/MainWindow.xaml
@@ -15,29 +15,26 @@
         </Grid.ColumnDefinitions>
         <TabControl Grid.ColumnSpan="3" Margin="0,25,0,0"  Background="#990F39">
             <TabItem Header="Play"  >
-                <Grid Grid.Column="1" Background="#990F39" >
-                    <Label Content="Slots" FontSize="30" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="378,0,0,365"/>
-                    <Border x:Name="border" BorderBrush="Black" BorderThickness="1" Height="183" Background="#AB7A11" Width="300" Margin="272,121,272,177">
+                <StackPanel Grid.Column="1"  >
+                    <Label Content="Slots" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="1,20,1,1"/>
+                    <Border x:Name="border" BorderBrush="Black" BorderThickness="1" Height="183" Background="#AB7A11" Width="300">
                         <Canvas  Margin="-1,0,-1,0">
 
                             <Label x:Name="win1" Content="0" FontSize="50" VerticalAlignment="Top"  HorizontalAlignment="Center" Canvas.Top="31" Canvas.Left="10"/>
                             <Label x:Name="win2" Content="0" FontSize="50" VerticalAlignment="Top" HorizontalAlignment="Center" Canvas.Left="132" Canvas.Top="31"/>
                             <Label x:Name="win3" Content="0" FontSize="50" VerticalAlignment="Top" HorizontalAlignment="Center"  Canvas.Left="253" Canvas.Top="32" RenderTransformOrigin="0.505,0.542"/>
-                            <Label  Content="Your win:" Canvas.Left="122" Canvas.Top="113" FontFamily="Book Antiqua" FontWeight="Bold"/>
+                            <Label  Content="You win:" Canvas.Left="122" Canvas.Top="113" FontFamily="Book Antiqua" FontWeight="Bold"/>
                             <Label x:Name="slotsResult" Content="$" Canvas.Left="145" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="16"/>
                         </Canvas>
                     </Border>
-                    <Button x:Name="Spin"  Width="87" Height="31" Margin="378,331,378,119" Click="Spin_Click" Background="#17a832"
+                    <Button x:Name="Spin"  Width="87" Height="31" Margin="1,30,1,1" Click="Spin_Click" Background="#17a832"
                     Foreground="Black" >
                         <TextBlock TextDecorations="Underline" FontFamily="Comic Sans MS" FontSize="16" Margin="0,3" >Spin</TextBlock>
                     </Button>
-                </Grid>
+                </StackPanel>
 
             </TabItem>
-
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
+            
         </TabControl>
         <Menu Grid.ColumnSpan="3" Height="25" VerticalAlignment="Top" Background="#AB1A45"  FontWeight="Bold" Foreground="#BCC0C2">
             <MenuItem x:Name="firstMenuItem" Header="tech support" Height="24" >
@@ -47,5 +44,24 @@
                 <MenuItem Header="support us :)" Click="MenuItem_Click"/>
             </MenuItem>
         </Menu>
+        <StackPanel Grid.Column="0">
+            <Border  Height="35" Width="175" Margin="-25,90,49,4" Background="#9b1768">
+                <Canvas >
+                    <Label Content="Your balance:" Foreground="#ff8e1e"  FontSize="17" Height="35" Width="175"
+                      Margin="1,1,1,1" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                    <Label x:Name="balance" Content="200" Foreground="#177d27" FontSize="19" FontWeight="Bold"
+                           Canvas.Left="109" Canvas.Top="-1" RenderTransformOrigin="0.224,0.04" Height="35" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                    <Label Content="$" Foreground="#167824" FontSize="17" Canvas.Left="156" Canvas.Top="1" HorizontalAlignment="Left" VerticalAlignment="Top"  />
+                </Canvas>
+            </Border>
+            <Button Content="Пополнить счет" Height="56" Width="198" Margin="-50,20,0,4" Background="White" Foreground="Green"
+                    FontSize="20" FontWeight="bold" Click="Reload_Click"/>
+            <TextBox x:Name="reviewBox" TextWrapping="Wrap" Text="Оставить отзыв:"  Width="236" Height="32" Margin="0,250,0,1" FontSize="18"  TextChanged="ReviewBox_TextChanged"/>
+        </StackPanel>
+        <StackPanel Grid.Column="2">
+            <Button x:Name="Withdraw" Content="Withdraw" Margin="198,100,25,453" FontSize="10" Click="Withdraw_Click"/>
+
+        </StackPanel>
+
     </Grid>
 </Window>
